--- a/public_html/challenge.html
+++ b/public_html/challenge.html
@@ -23,9 +23,10 @@
     </script>
     <style>
         /* TODO: make edits here */
-        ul li {
-            /*make the vangi horizontal*/
-            display: inline;
+        ul li{
+            /*make the vanigation horizontal*/
+            display:inline-block;
+
             /*additinal styling*/
             padding: 0.32rem;
             /*text size*/
@@ -71,7 +72,7 @@
     <h1>Problem 1</h1>
     <ul>
         <!--having hyperlinks-->
-        <li><a href = "#" onclick = 'getCurrentSelection(this)'>login</a></li>
+        <li><a href = "#" onclick ='getCurrentSelection(this)'>login</a></li>
         <li><a href = "#" onclick='getCurrentSelection(this)'>register</a></li>
         <li><a href = "#" onclick='getCurrentSelection(this)'>profile</a></li>
         <li><a href = "#" onclick='getCurrentSelection(this)'>logout</a></li>
@@ -79,6 +80,11 @@
 
     <script src = "external.js"></script>
 
+function updateCurrentPage(contenToUpdate){
+    document.querSelecttor("h1").innerText = contentToUpdate;
+    document.querSelecttor("title").innerText = contentToUpdate;
+
+}
 
     <!-- make the necessary edits above this line -->
 
