--- a/public_html/M6/html5.html
+++ b/public_html/M6/html5.html
@@ -37,7 +37,7 @@ function makeSquare(x, y, length, speed) {
 }
 
 // The ship the user controls
-var ship = makeSquare(0, canvas.height / 2 - 25, 50, 5);
+var ship = makeSquare(0, canvas.height / 2 - 25, 50, 8);
 
 // Flags to tracked which keys are pressed
 var up = false;
@@ -47,7 +47,7 @@ var space = false;
 // Is a bullet already on the canvas?
 var shooting = false;
 // The bulled shot from the ship
-var bullet = makeSquare(0, 0, 10, 10);
+var bullet = makeSquare(0, 0, 15, 15);
 
 // An array for enemies (in case there are more than one)
 var enemies = [];
@@ -58,8 +58,10 @@ function makeEnemy() {
   var enemyX = canvas.width;
   var enemySize = Math.round((Math.random() * 15)) + 15;
   var enemyY = Math.round(Math.random() * (canvas.height - enemySize * 2)) + enemySize;
+  var enemyY2 = Math.round(Math.random() * (canvas.height - enemySize * 2)) + enemySize;
   var enemySpeed = Math.round(Math.random() * enemyBaseSpeed) + enemyBaseSpeed;
   enemies.push(makeSquare(enemyX, enemyY, enemySize, enemySpeed));
+  enemies.push(makeSquare(enemyX+250, enemyY2, enemySize+3, enemySpeed));
 }
 
 // Check if number a is in the range b to c (exclusive)
@@ -159,6 +161,7 @@ function erase() {
 function shoot() {
 //  if (!shooting) {
     shooting = true;
+    bullet = makeSquare(0, 0, (Math.round((Math.random() * 10)) + 15), (Math.round((Math.random() * 15)) + 10));
     bullet.x = ship.x + ship.l;
     bullet.y = ship.y + ship.l / 2;
  // }
